--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-light bg-primary">
     <div class="container-fluid">
         <h1 class="text-light">Angular CRUD</h1>
+        
         <div class="d-flex">
+            <button type="button" routerLink="/products" class="btn btn-dark btn-outline-warning mr-2">Products</button>
             <button  (click) = "clickAddEmploye()" type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
                 Add Employee
             </button>
